@@ -1029,6 +1029,7 @@ POST /jobs
      - **resource** (*string*): the resources description as required by oar (example: "/nodes=1/cpu=2")
      - **command** (*string*): a command name or a script that is executed when the job starts
      - **workdir** (*string*): the path of the directory from where the job will be submited
+     - **param_file** (*string*): the content of a parameters file, for the submission of an array job. For example: {"resource":"/nodes=1, "command":"sleep", "param_file":"60\n90\n30"}
      - **All other option accepted by the oarsub unix command**: every long option that may be passed to the oarsub command is known as a key of the input hash. If the option is a toggle (no value), you just have to set it to "1" (for example: 'use-job-key' => '1'). Some options may be arrays (for example if you want to specify several 'types' for a job)
   *yaml example*:
     ::
