@@ -61,6 +61,10 @@ version 2.5.0:
     with an exit code of 99: oarsub -t idempotent "sleep 5; exit 99"
   - Bugfix API: Some informations where missing into jobs/details, especially the 
     scheduled resources.
+  - API: added support of "param_file" value for array job submissions. This value
+    is a string representing the content of a parameters file. Sample submission:
+       {"resource":"/cpu=1", "command":"sleep", "param_file":"60\n90\n30"}
+    This submits 3 sleep jobs with differents sleep values.
 
 version 2.4.4:
 --------------
